# pypartpicker

./: .gitignore  LICENSE  LICENSE.txt  README.md  example.py  main.py  pyproject.toml  pyvenv.cfg  setup.py
pypartpicker/: __init__.py  client.py  errors.py  part.py  regex.py  scraper.py  setup.py  types.py  urls.py
pypartpicker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pypartpicker/pcpartpicker/: __init__.py  pcpp_fetch_url.py
pypartpicker/pypartpicker/: __init__.py  scraper.py
